--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "a simple chat to learn websockets",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "ts-node-dev --ignore-watch node_modules src/server.ts",
+    "prod": "tsc && node src/server.js"
   },
   "repository": {
     "type": "git",
