--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "typescript": "^3.9.6"
   },
   "dependencies": {
+    "ejs": "^3.1.3",
     "express": "^4.17.1",
     "socket.io": "^2.3.0"
   }
