--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/guiguat/simple-chat#readme",
   "devDependencies": {
+    "@types/ejs": "^3.0.4",
     "@types/express": "^4.17.7",
     "@types/socket.io": "^2.1.8",
     "ts-node": "^8.10.2",
