--- a/server/package.json
+++ b/server/package.json
@@ -4,8 +4,8 @@
   "description": "a simple chat to learn websockets",
   "main": "server.js",
   "scripts": {
-    "dev": "ts-node-dev --ignore-watch node_modules src/server.ts",
-    "prod": "tsc && node src/server.js"
+    "dev": "ts-node-dev --ignore-watch node_modules ./src/server.ts",
+    "prod": "tsc && node ./src/server.js"
   },
   "repository": {
     "type": "git",
