--- a/server/package.json
+++ b/server/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/guiguat/simple-chat#readme",
   "devDependencies": {
     "@types/express": "^4.17.7",
+    "@types/node": "^14.0.23",
     "@types/socket.io": "^2.1.8",
     "ts-node": "^8.10.2",
     "ts-node-dev": "^1.0.0-pre.51",
