--- a/server/package.json
+++ b/server/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/guiguat/simple-chat#readme",
   "devDependencies": {
+    "@types/cors": "^2.8.6",
     "@types/express": "^4.17.7",
     "@types/node": "^14.0.23",
     "@types/socket.io": "^2.1.8",
@@ -26,6 +27,7 @@
     "typescript": "^3.9.6"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "socket.io": "^2.3.0"
   }
